Fix spacing issue on form containers

--- a/static/style.css
+++ b/static/style.css
@@ -212,16 +212,13 @@ nav ul li a:hover {
 }
 
 .left-container-predict {
-    display: flex;
-    flex: 1;
+    display: 1;
     margin: 10px;
-    width: 100%;
-    height: 100%;
+    height: 90vh;
     border-radius: 8px;
     box-shadow: 0px 0px 8px #adadad;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
+    overflow: hidden;
+    margin: auto;
 }
 
 .right-container {
@@ -261,6 +258,7 @@ h3 .left-container {
     padding-right: 35px;
     padding-left: 35px;
     border-radius: 8px;
+    margin: auto;
 }
 
 .login-createAcc-header {
